# CMakeNote

./: README.md
t2/: CMakeLists.txt  COPYRIGHT  README
t2/doc/: hello.txt
t2/src/: CMakeLists.txt
t3/lib/: CMakeLists.txt  hello.c  hello.h
t4/: CMakeLists.txt
t4/src/: CMakeLists.txt
